; ModuleID = '/home/carl/AnghaBench/8cc/test/extr_conversion.c_test_bool.c'
source_filename = "/home/carl/AnghaBench/8cc/test/extr_conversion.c_test_bool.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_bool to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_bool() #0 {
  %1 = alloca i8, align 1
  store i8 1, i8* %1, align 1
  %2 = load i8, i8* %1, align 1
  %3 = trunc i8 %2 to i1
  %4 = zext i1 %3 to i32
  %5 = call i32 (i32, i32, ...) bitcast (i32 (...)* @expect to i32 (i32, i32, ...)*)(i32 1, i32 %4)
  store i8 1, i8* %1, align 1
  %6 = load i8, i8* %1, align 1
  %7 = trunc i8 %6 to i1
  %8 = zext i1 %7 to i32
  %9 = call i32 (i32, i32, ...) bitcast (i32 (...)* @expect to i32 (i32, i32, ...)*)(i32 1, i32 %8)
  store i8 1, i8* %1, align 1
  %10 = load i8, i8* %1, align 1
  %11 = trunc i8 %10 to i1
  %12 = zext i1 %11 to i32
  %13 = call i32 (i32, i32, ...) bitcast (i32 (...)* @expect to i32 (i32, i32, ...)*)(i32 1, i32 %12)
  store i8 0, i8* %1, align 1
  %14 = load i8, i8* %1, align 1
  %15 = trunc i8 %14 to i1
  %16 = zext i1 %15 to i32
  %17 = call i32 (i32, i32, ...) bitcast (i32 (...)* @expect to i32 (i32, i32, ...)*)(i32 0, i32 %16)
  ret void
}

declare dso_local i32 @expect(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
